# PoggyChat

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
gui/: chatmain.ui
modules/: module1.py
