[tool.poetry]
name = "poggychat"
version = "0.0.3"
description = "Fully Open Source Chatting App & Server"
authors = ["MisileLaboratory"]
license = "MisileLab License"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.20.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
